<resources>
    <!--UI-->
    <string name="app_name">Ballistic calculator</string>
    <string name="save">Save</string>
    <string name="scope">Scope</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="cartridge">Cartridge</string>
    <string name="calculate">Calculate</string>
    <string name="info">Info</string>

    <!--Measure standards-->
    <string name="sec">seconds</string>
    <string name="moa">min of angle</string>
    <string name="mph">miles per hour</string>
    <string name="fahrenheit">fahrenheits</string>
    <string name="feet">feet</string>
    <string name="inch">inches</string>
    <string name="yard">yards</string>
    <string name="degree">degree</string>
    <string name="feet_per_second">feet per second</string>
    <string name="click">clicks</string>

    <!--Result table-->
    <string name="result">Result</string>
    <string name="short_moa">MOA</string>
    <string name="mrad">MRAD</string>
    <string name="vert">Vert</string>
    <string name="horiz">Horiz</string>

    <!--Attributes-->
    <string name="distance_att">Distance</string>
    <string name="target_elevation_att">Target elevation</string>
    <string name="wind_speed_att">Wind speed</string>
    <string name="wind_direction_att">Wind direction</string>
    <string name="temp_att">Temperature</string>
    <string name="press_att">Pressure</string>
    <string name="alt_att">Altitude</string>
    <string name="v_click_att">Vert click</string>
    <string name="h_click_att">Horiz click</string>
    <string name="sight_h_att">Sight height</string>
    <string name="sight_d_att">Sighting distance</string>
    <string name="sound_speed_att">Sound speed</string>
    <string name="target_speed_att">Target speed</string>
    <string name="bullet_speed_att">Bullet speed</string>
    <string name="fly_time_att">Fly time</string>
    <string name="ballistic_coef_att">Ballistic coefficient</string>
    <string name="bullet_weight_att">Bullet weight</string>

    <!--Preferences-->
    <string name="main_distance_pref">Main Distance</string>
    <string name="main_elevation_pref">Main Elevation</string>
    <string name="main_speed_pref">Main Speed</string>
    <string name="main_direction_pref">Main Direction</string>
    <string name="main_rifle_pref">Main Rifle</string>

    <string name="info_sound_pref">Info Sound speed</string>
    <string name="info_target_pref">Info Target speed</string>
    <string name="info_time_pref">Info Fly time</string>

    <string name="atmo_alt_pref">Atmo Altitude</string>
    <string name="atmo_temp_pref">Atmo Temperature</string>
    <string name="atmo_press_pref">Atmo Pressure</string>


    <string name="cat_rifle_pref">Cat Rifle</string>
    <string name="cat_weight_pref">Cat Bullet weight</string>
    <string name="cat_ballistic_pref">Cat Ballistic coefficient</string>
    <string name="cat_speed_pref">Cat Bullet speed</string>
    <string name="cat_temp_pref">Cat Temperature</string>

    <string name="scope_distance_pref">Scope Distance</string>
    <string name="scope_height_pref">Scope Height</string>
    <string name="scope_v_click_pref">Scope Vert Clicks</string>
    <string name="scope_h_click_pref">Scope Horiz Clicks</string>
    <string name="scope_unit_pref">Scope Unit</string>
    <string name="scope_grid_pref">Scope Grid</string>

    <!--Table Values-->
    <string name="table_v_moa">Table V Moa</string>
    <string name="table_h_moa">Table H Moa</string>
    <string name="table_v_mrad">Table V Mrad</string>
    <string name="table_h_mrad">Table H Mrad</string>
    <string name="table_v_inch">Table V Inch</string>
    <string name="tabke_h_inch">Table H Inch</string>
    <string name="table_v_click">Table V Click</string>
    <string name="table_h_click">Table H Click</string>


</resources>