<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:shrinkColumns="*"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/altitude" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:maxLines="1"
                android:text="@string/alt_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/atmo_alt_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/feet"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:maxLines="1"
                android:text="@string/temp_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/atmo_temp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/fahrenheit"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/pressure" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:maxLines="1"
                android:text="@string/press_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/atmo_press_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/inch"
                android:inputType="number|numberDecimal" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/atmo_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:text="@string/save"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>