<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:shrinkColumns="*"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/bullettransform" />

            <Spinner
                android:id="@+id/cat_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:entries="@array/catridge_array" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageBulletWeight"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/weight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/bullet_weight_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cat_weight_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="0"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageBallisticCoef"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/balistic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/ballistic_coef_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cat_ballistic_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="end"
                android:hint="0"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageBulletSpeed"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/speed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/bullet_speed_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cat_speed_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/feet_per_second"
                android:inputType="number|numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageTemp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/temp_att"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cat_temp_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/fahrenheit"
                android:inputType="number|numberDecimal" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/cat_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:text="@string/save"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>